--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 /*
- * Created by Andrii Kovalchuk on 01.12.19 17:59
+ * Created by Andrii Kovalchuk on 01.12.19 22:42
  * Copyright (c) 2019. All rights reserved.
- * Last modified 01.12.19 17:42
+ * Last modified 01.12.19 21:45
  *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -50,8 +50,11 @@ android {
 	}
 
 	compileOptions {
-		sourceCompatibility = '1.8'
-		targetCompatibility = '1.8'
+		sourceCompatibility = JavaVersion.VERSION_1_8
+		targetCompatibility = JavaVersion.VERSION_1_8
+	}
+	kotlinOptions {
+		jvmTarget = "1.8"
 	}
 
 	dataBinding {
