--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 /*
- * Created by Andrii Kovalchuk on 01.12.19 22:42
+ * Created by Andrii Kovalchuk on 02.12.19 17:21
  * Copyright (c) 2019. All rights reserved.
- * Last modified 01.12.19 21:45
+ * Last modified 02.12.19 17:01
  *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -84,9 +84,8 @@ dependencies {
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 	implementation 'androidx.appcompat:appcompat:1.1.0'
 	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta3'
+	implementation 'androidx.drawerlayout:drawerlayout:1.1.0-alpha03'
 	implementation 'com.google.android.material:material:1.2.0-alpha02'
-	implementation 'androidx.recyclerview:recyclerview:1.1.0'
-	implementation 'androidx.cardview:cardview:1.0.0'
 
 	//custom UI
 	implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
