--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 04.12.19 19:13
+  ~ Last modified 04.12.19 21:19
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -27,9 +27,12 @@
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
 
+
 		<activity
-			android:name=".ui.SplashActivity"
-			android:screenOrientation="portrait">
+			android:name=".ui.MainActivity"
+			android:label="@string/app_name"
+			android:screenOrientation="portrait"
+			android:windowSoftInputMode="adjustPan">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<action android:name="android.intent.action.VIEW" />
@@ -37,17 +40,6 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-
-		<activity
-			android:name=".ui.MainActivity"
-			android:label="@string/app_name"
-			android:screenOrientation="portrait"
-			android:windowSoftInputMode="adjustPan"/>
-
-		<activity
-			android:name=".ui.auth.view.AuthActivity"
-			android:configChanges="orientation|keyboard|keyboardHidden"
-			android:screenOrientation="portrait" />
 
 		<activity
 			android:name=".ui.chat.view.FullScreenDialogFragment"
