--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,7 +1,7 @@
 /*
  * Created by Andrii Kovalchuk
  * Copyright (c) 2019. All rights reserved.
- * Last modified 04.12.19 19:13
+ * Last modified 15.12.19 16:33
  *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -24,6 +24,9 @@ android {
 
 	defaultConfig {
 		buildConfigField("String", "FIREBASE_STORAGE_URL", keyProperties['FIREBASE_STORAGE_URL'])
+		buildConfigField("String", "KEY_ENCRYPTION_KEY", keyProperties['KEY_ENCRYPTION_KEY'])
+		buildConfigField("String", "VALUE_ENCRYPTION_KEY", keyProperties['VALUE_ENCRYPTION_KEY'])
+		buildConfigField("String", "VALUE_ENCRYPTION_VECTOR_KEY", keyProperties['VALUE_ENCRYPTION_VECTOR_KEY'])
 
 		minSdkVersion globalConfiguration["androidMinSdkVersion"]
 		targetSdkVersion globalConfiguration["androidTargetSdkVersion"]
