bug rendering xml fixed, do not update the lastest alpha update google material design

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 #
 # Created by Andrii Kovalchuk
-# Copyright (c) 2019. All rights reserved.
-# Last modified 04.12.19 19:13
+# Copyright (c) 2020. All rights reserved.
+# Last modified 17.01.20 19:19
 #
 # This Source Code Form is subject to the terms of the Mozilla Public
 # License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -26,7 +26,6 @@ android.enableJetifier=true
 android.useAndroidX=true
 kapt.use.worker.api=true
 kotlin.code.style=official
-
-org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+org.gradle.jvmargs=-Xmx4096M -Dkotlin.daemon.jvm.options\="-Xmx2048M" -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.parallel=true
 #org.gradle.warning.mode=all
