--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 /*
  * Created by Andrii Kovalchuk
  * Copyright (c) 2020. All rights reserved.
- * Last modified 17.01.20 19:33
+ * Last modified 19.01.20 17:03
  *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -103,6 +103,7 @@ dependencies {
 
 	//glide
 	implementation 'com.github.bumptech.glide:glide:4.11.0'
+	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 	kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
 	// Dagger
@@ -131,8 +132,6 @@ dependencies {
 
 	//binary prefs
 	implementation "com.github.yandextaxitech:binaryprefs:1.0.1"
-
-
 
 
 }
