--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 /*
  * Created by Andrii Kovalchuk
  * Copyright (c) 2020. All rights reserved.
- * Last modified 19.01.20 17:03
+ * Last modified 26.01.20 13:50
  *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -83,6 +83,7 @@ dependencies {
 	implementation 'androidx.core:core-ktx:1.2.0-rc01'
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 	implementation 'androidx.appcompat:appcompat:1.2.0-alpha01'
+	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
 	implementation 'androidx.drawerlayout:drawerlayout:1.1.0-alpha03'
 	implementation 'com.google.android.material:material:1.2.0-alpha02'
@@ -103,7 +104,6 @@ dependencies {
 
 	//glide
 	implementation 'com.github.bumptech.glide:glide:4.11.0'
-	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 	kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
 	// Dagger
@@ -118,13 +118,13 @@ dependencies {
 	implementation libs.rxAndroid
 
 	// Retrofit
-	implementation 'com.squareup.retrofit2:retrofit:2.7.1'
-	implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
-	implementation "com.squareup.retrofit2:adapter-rxjava2:2.7.1"
+	implementation libs.retrofit
+	implementation libs.retrofitAdapter
+	implementation libs.retrofitConverter
 
-	// Navigation controller
-	implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-rc04'
-	implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-rc04'
+	// Navigation component
+	implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0'
+	implementation 'androidx.navigation:navigation-ui-ktx:2.2.0'
 
 
 	// ViewModel and LiveData
