--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 /*
  * Created by Andrii Kovalchuk
  * Copyright (c) 2020. All rights reserved.
- * Last modified 26.01.20 13:59
+ * Last modified 26.01.20 14:37
  *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -105,6 +105,9 @@ dependencies {
 	//glide
 	implementation 'com.github.bumptech.glide:glide:4.11.0'
 	kapt 'com.github.bumptech.glide:compiler:4.11.0'
+	implementation('com.github.bumptech.glide:okhttp3-integration:4.9.0') {
+		exclude group: 'glide-parent'
+	}
 
 	// Dagger
 	implementation libs.dagger
