--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 09.12.19 21:12
+  ~ Copyright (c) 2020. All rights reserved.
+  ~ Last modified 27.01.20 15:25
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -27,7 +27,6 @@
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
 
-
 		<activity
 			android:name=".ui.MainActivity"
 			android:label="@string/app_name"
@@ -35,6 +34,7 @@
 			android:windowSoftInputMode="adjustPan">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
+
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
@@ -42,8 +42,6 @@
 		<meta-data
 			android:name="preloaded_fonts"
 			android:resource="@array/preloaded_fonts" />
-
-
 		<meta-data
 			android:name="com.facebook.sdk.ApplicationId"
 			android:value="@string/facebook_app_id" />
@@ -54,11 +52,19 @@
 			android:name="com.facebook.sdk.AutoLogAppEventsEnabled"
 			android:value="false" />
 
+		<!-- This custom default icon is used when no icon is set for incoming notification messages. -->
+		<meta-data
+			android:name="com.google.firebase.messaging.default_notification_icon"
+			android:resource="@drawable/ic_account_24dp" />
+		<!-- This color is used when no color is set for the incoming notification message. -->
+		<meta-data
+			android:name="com.google.firebase.messaging.default_notification_color"
+			android:resource="@color/colorAccent" />
+
 		<activity
 			android:name="com.facebook.FacebookActivity"
 			android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
 			android:label="@string/app_name" />
-
 		<activity
 			android:name="com.facebook.CustomTabActivity"
 			android:exported="true">
@@ -81,6 +87,15 @@
 				android:name="android.support.FILE_PROVIDER_PATHS"
 				android:resource="@xml/provider_paths" />
 		</provider>
+
+		<service
+			android:name=".core.notifications.FirestoreNotificationsService"
+			android:enabled="true"
+			android:exported="false">
+			<intent-filter>
+				<action android:name="com.google.firebase.MESSAGING_EVENT" />
+			</intent-filter>
+		</service>
 
 	</application>
 
