--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 27.01.20 15:25
+  ~ Last modified 30.01.20 20:13
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -52,10 +52,10 @@
 			android:name="com.facebook.sdk.AutoLogAppEventsEnabled"
 			android:value="false" />
 
-		<!-- This custom default icon is used when no icon is set for incoming notification messages. -->
 		<meta-data
-			android:name="com.google.firebase.messaging.default_notification_icon"
-			android:resource="@drawable/ic_account_24dp" />
+			android:name="com.google.firebase.messaging.default_notification_channel_id"
+			android:value="@string/notification_channel_id" />
+
 		<!-- This color is used when no color is set for the incoming notification message. -->
 		<meta-data
 			android:name="com.google.firebase.messaging.default_notification_color"
