--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 /*
  * Created by Andrii Kovalchuk
  * Copyright (c) 2020. All rights reserved.
- * Last modified 02.02.20 20:55
+ * Last modified 11.02.20 17:59
  *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -137,5 +137,6 @@ dependencies {
 	//binary prefs
 	implementation "com.github.yandextaxitech:binaryprefs:1.0.1"
 
+	implementation 'com.github.bmoliveira:snake-yaml:v1.18-android'
 
 }
