--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 /*
  * Created by Andrii Kovalchuk
  * Copyright (c) 2020. All rights reserved.
- * Last modified 18.02.20 18:43
+ * Last modified 18.02.20 20:21
  *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -138,7 +138,7 @@ dependencies {
 	implementation "com.github.yandextaxitech:binaryprefs:1.0.1"
 
 
-	implementation 'com.github.moove-it:fakeit:v0.7'
+	implementation 'com.github.moove-it:fakeit:0.7'
 
 
 }
