gradle updates (android studio 3.6)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 /*
  * Created by Andrii Kovalchuk
  * Copyright (c) 2020. All rights reserved.
- * Last modified 18.02.20 20:21
+ * Last modified 25.02.20 16:40
  *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -30,6 +30,10 @@ android {
 		//testInstrumentationRunner globalConfiguration["testInstrumentationRunner"]
 		multiDexEnabled = true
 	}
+
+//	android {
+//		viewBinding.enabled = true
+//	}
 
 	buildTypes {
 		debug {
