added tint colors

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 /*
  * Created by Andrii Kovalchuk
  * Copyright (c) 2020. All rights reserved.
- * Last modified 04.03.20 19:45
+ * Last modified 05.03.20 16:16
  *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -94,6 +94,7 @@ dependencies {
 
 	//custom UI
 	implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
+	implementation 'org.florescu.android.rangeseekbar:rangeseekbar-library:0.3.0'
 
 	// Firebase
 	implementation libs.firebaseAuth
