--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 /*
  * Created by Andrii Kovalchuk
  * Copyright (c) 2020. All rights reserved.
- * Last modified 04.03.20 19:27
+ * Last modified 22.03.20 17:31
  *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -16,23 +16,26 @@ buildscript {
 
 		kotlin_version = '1.3.70'
 
+		// Dagger
+		dagger_version = '2.27'
+
 		// facebook
-		facebook_sdk_version = '6.1.0'
+		facebook_sdk_version = '6.2.0'
 
 		//firebase
-		firebase_auth_version = '19.2.0'
+		firebase_auth_version = '19.3.0'
 		firebase_core_version = '17.2.3'
 		firebase_firestore_version = '21.4.1'
 		firebase_storage_version = '19.1.1'
 
-		// Dagger
-		dagger_version = '2.26'
+		//navigation component
+		navigation_version = '2.3.0-alpha04'
 
 		//retrofit
 		retrofit_version = '2.7.2'
 
 		// RxJava
-		rxjava_version = '2.2.18'
+		rxjava_version = '2.2.19'
 
 		// RxAndroid
 		rxandroid_version = '2.1.1'
@@ -51,6 +54,8 @@ buildscript {
 			firebaseCore        : ('com.google.firebase:firebase-core:' + firebase_core_version),
 			firestorage         : ('com.google.firebase:firebase-storage:' + firebase_storage_version),
 			firestore           : ('com.google.firebase:firebase-firestore:' + firebase_firestore_version),
+			navigation_fragment : ('androidx.navigation:navigation-fragment-ktx:' + navigation_version),
+			navigation_ui       : ('androidx.navigation:navigation-ui-ktx:' + navigation_version),
 			retrofit            : ('com.squareup.retrofit2:retrofit:' + retrofit_version),
 			retrofitAdapter     : ('com.squareup.retrofit2:adapter-rxjava2:' + retrofit_version),
 			retrofitConverter   : ('com.squareup.retrofit2:converter-gson:' + retrofit_version),
