--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 /*
  * Created by Andrii Kovalchuk
  * Copyright (c) 2020. All rights reserved.
- * Last modified 27.03.20 15:19
+ * Last modified 27.03.20 19:45
  *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -12,6 +12,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.firebase.crashlytics'
+apply plugin: 'com.google.firebase.firebase-perf'
 apply plugin: 'com.google.gms.google-services'
 
 
@@ -101,8 +103,12 @@ dependencies {
 	implementation libs.firebaseCore
 	implementation libs.firestorage
 	implementation libs.firestore
-	implementation 'com.google.firebase:firebase-analytics:17.2.3'
 	implementation 'com.google.firebase:firebase-messaging:20.1.3'
+	//firebase analytics
+	implementation 'com.google.firebase:firebase-analytics:17.2.3'
+	implementation 'com.google.firebase:firebase-crashlytics:17.0.0-beta02'
+	implementation 'com.google.firebase:firebase-perf:19.0.5'
+
 
 	//facebook auth
 	implementation libs.facebookLogin
