--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 19.03.20 14:52
+  ~ Last modified 27.03.20 19:46
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -53,6 +53,9 @@
 		<meta-data
 			android:name="com.facebook.sdk.AutoLogAppEventsEnabled"
 			android:value="false" />
+		<meta-data
+			android:name="firebase_performance_logcat_enabled"
+			android:value="true" />
 
 		<activity
 			android:name="com.facebook.FacebookActivity"
