--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 /*
  * Created by Andrii Kovalchuk
  * Copyright (c) 2020. All rights reserved.
- * Last modified 27.03.20 16:30
+ * Last modified 27.03.20 19:46
  *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -73,6 +73,8 @@ buildscript {
 		classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 		classpath 'com.github.ben-manes:gradle-versions-plugin:0.28.0'
 		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+		classpath 'com.google.firebase:firebase-crashlytics-gradle:2.0.0-beta03'
+		classpath 'com.google.firebase:perf-plugin:1.3.1'  // Performance Monitoring plugin
 	}
 
 	repositories {
