--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 /*
  * Created by Andrii Kovalchuk
  * Copyright (c) 2020. All rights reserved.
- * Last modified 27.03.20 19:45
+ * Last modified 31.03.20 17:10
  *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -97,16 +97,17 @@ dependencies {
 	//custom UI
 	implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
 	implementation 'org.florescu.android.rangeseekbar:rangeseekbar-library:0.4.0'
+	implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
 	// Firebase
 	implementation libs.firebaseAuth
 	implementation libs.firebaseCore
 	implementation libs.firestorage
 	implementation libs.firestore
-	implementation 'com.google.firebase:firebase-messaging:20.1.3'
+	implementation 'com.google.firebase:firebase-messaging:20.1.4'
 	//firebase analytics
-	implementation 'com.google.firebase:firebase-analytics:17.2.3'
-	implementation 'com.google.firebase:firebase-crashlytics:17.0.0-beta02'
+	implementation 'com.google.firebase:firebase-analytics:17.3.0'
+	implementation 'com.google.firebase:firebase-crashlytics:17.0.0-beta03'
 	implementation 'com.google.firebase:firebase-perf:19.0.5'
 
 
