--- a/app/.gitignore
+++ b/app/.gitignore
@@ -2,4 +2,5 @@
 /google-services.json
 /src/main/res/values/font_certs.xml
 /src/main/res/values/misc.xml
-!/src/main/java/com/mmdev/roove/utils/UtilityManager.kt
+/src/main/java/com/mmdev/roove/utils/UtilityManager.kt
+
