--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 /*
  * Created by Andrii Kovalchuk
  * Copyright (c) 2020. All rights reserved.
- * Last modified 31.03.20 17:10
+ * Last modified 08.04.20 17:44
  *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -87,10 +87,9 @@ dependencies {
 	implementation project(':data')
 
 	//core
-	implementation 'androidx.core:core-ktx:1.3.0-alpha02'
+	implementation 'androidx.core:core-ktx:1.3.0-beta01'
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-	implementation 'androidx.appcompat:appcompat:1.2.0-alpha03'
-	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+	implementation 'androidx.appcompat:appcompat:1.2.0-beta01'
 	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
 	implementation 'com.google.android.material:material:1.2.0-alpha02'
 
@@ -104,7 +103,7 @@ dependencies {
 	implementation libs.firebaseCore
 	implementation libs.firestorage
 	implementation libs.firestore
-	implementation 'com.google.firebase:firebase-messaging:20.1.4'
+	implementation 'com.google.firebase:firebase-messaging:20.1.5'
 	//firebase analytics
 	implementation 'com.google.firebase:firebase-analytics:17.3.0'
 	implementation 'com.google.firebase:firebase-crashlytics:17.0.0-beta03'
