--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 /*
  * Created by Andrii Kovalchuk
  * Copyright (c) 2020. All rights reserved.
- * Last modified 08.04.20 17:42
+ * Last modified 03.07.20 20:35
  *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -14,28 +14,28 @@ buildscript {
 
 	ext {
 
-		kotlin_version = '1.3.71'
+		kotlin_version = '1.3.72'
 
 		// Dagger
-		dagger_version = '2.27'
+		dagger_version = '2.28.1'
 
 		// facebook
-		facebook_sdk_version = '6.3.0'
+		facebook_sdk_version = '7.1.0'
 
 		//firebase
-		firebase_auth_version = '19.3.0'
-		firebase_core_version = '17.3.0'
-		firebase_firestore_version = '21.4.2'
+		firebase_auth_version = '19.3.1'
+		firebase_core_version = '17.4.3'
+		firebase_firestore_version = '21.4.3'
 		firebase_storage_version = '19.1.1'
 
 		//navigation component
-		navigation_version = '2.3.0-alpha04'
+		navigation_version = '2.3.0'
 
 		//retrofit
-		retrofit_version = '2.8.1'
+		retrofit_version = '2.9.0'
 
 		// RxJava3
-		rxjava_version = '3.0.2'
+		rxjava_version = '3.0.4'
 
 		// RxAndroid3
 		rxandroid_version = '3.0.0'
@@ -68,12 +68,12 @@ buildscript {
 
 
 	dependencies {
-		classpath 'com.android.tools.build:gradle:3.6.2'
+		classpath 'com.android.tools.build:gradle:4.0.0'
 		classpath 'com.google.gms:google-services:4.3.3'
 		classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 		classpath 'com.github.ben-manes:gradle-versions-plugin:0.28.0'
 		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-		classpath 'com.google.firebase:firebase-crashlytics-gradle:2.0.0-beta03'
+		classpath 'com.google.firebase:firebase-crashlytics-gradle:2.2.0'
 		classpath 'com.google.firebase:perf-plugin:1.3.1'  // Performance Monitoring plugin
 	}
 
@@ -88,11 +88,13 @@ buildscript {
 allprojects {
 
 	ext {
+//		androidCompileSdkVersion = 'android-R'
 		androidCompileSdkVersion = 29
-		androidVersionCode = 1
-		androidVersionName = "1.0"
+		androidVersionCode = 2
+		androidVersionName = "1.1.0"
 		androidMinSdkVersion = 21
 		androidTargetSdkVersion = 29
+		//androidTargetSdkVersion = 'R'
 		//testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
 	}
 
