--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 /*
  * Created by Andrii Kovalchuk
  * Copyright (c) 2020. All rights reserved.
- * Last modified 03.07.20 20:31
+ * Last modified 30.12.20 21:20
  *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -10,10 +10,8 @@
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.firebase.crashlytics'
-apply plugin: 'com.google.firebase.firebase-perf'
 apply plugin: 'com.google.gms.google-services'
 
 
@@ -30,17 +28,11 @@ android {
 		versionCode globalConfiguration["androidVersionCode"]
 		versionName globalConfiguration["androidVersionName"]
 		//testInstrumentationRunner globalConfiguration["testInstrumentationRunner"]
-		multiDexEnabled = true
 	}
-
-//	android {
-//		viewBinding.enabled = true
-//	}
 
 	buildTypes {
 		debug {
 			versionNameSuffix '-DEBUG'
-			multiDexEnabled = true
 		}
 
 		release {
@@ -51,7 +43,6 @@ android {
 			minifyEnabled true
 			shrinkResources true
 			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-			multiDexEnabled = true
 		}
 	}
 
@@ -87,27 +78,24 @@ dependencies {
 	implementation project(':data')
 
 	//core
-	implementation 'androidx.core:core-ktx:1.5.0-alpha01'
+	implementation 'androidx.core:core-ktx:1.5.0-alpha05'
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-	implementation 'androidx.appcompat:appcompat:1.3.0-alpha01'
-	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta6'
-	implementation 'com.google.android.material:material:1.3.0-alpha01'
+	implementation 'androidx.constraintlayout:constraintlayout:2.1.0-alpha2'
+	implementation 'com.google.android.material:material:1.3.0-beta01'
 
 	//custom UI
 	implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
 	implementation 'org.florescu.android.rangeseekbar:rangeseekbar-library:0.4.0'
 	implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
-	// Firebase
-	implementation libs.firebaseAuth
-	implementation libs.firebaseCore
-	implementation libs.firestorage
-	implementation libs.firestore
-	implementation 'com.google.firebase:firebase-messaging:20.2.1'
-	//firebase analytics
-	implementation 'com.google.firebase:firebase-analytics:17.4.3'
-	implementation 'com.google.firebase:firebase-crashlytics:17.1.0'
-	implementation 'com.google.firebase:firebase-perf:19.0.7'
+	//firebase
+	implementation platform('com.google.firebase:firebase-bom:26.2.0')
+	implementation 'com.google.firebase:firebase-auth-ktx'
+	implementation 'com.google.firebase:firebase-firestore-ktx'
+	implementation 'com.google.firebase:firebase-storage-ktx'
+	implementation 'com.google.firebase:firebase-crashlytics-ktx'
+	implementation 'com.google.firebase:firebase-analytics-ktx'
+	implementation 'com.google.firebase:firebase-messaging-ktx'
 
 
 	//facebook auth
@@ -125,8 +113,8 @@ dependencies {
 	kapt libs.daggerCompiler
 
 	// Navigation component
-	implementation libs.navigation_fragment
-	implementation libs.navigation_ui
+	implementation "androidx.navigation:navigation-ui-ktx:2.3.2"
+	implementation "androidx.navigation:navigation-fragment-ktx:2.3.2"
 
 	// RxJava
 	implementation libs.rxJava
@@ -134,20 +122,12 @@ dependencies {
 	// RxAndroid
 	implementation libs.rxAndroid
 
-	// Retrofit
-	implementation libs.retrofit
-	implementation libs.retrofitAdapter
-	implementation libs.retrofitConverter
-
 
 	// ViewModel and LiveData
-	implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+	implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
 	//binary prefs
 	implementation "com.github.yandextaxitech:binaryprefs:1.0.1"
-
-
-	implementation 'com.github.moove-it:fakeit:0.7'
 
 
 }
