--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,19 +1,11 @@
 /*
  * Created by Andrii Kovalchuk
- * Copyright (C) 2020. roove
+ * Copyright (c) 2020. All rights reserved.
+ * Last modified 31.12.20 18:58
  *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program.  If not, see https://www.gnu.org/licenses
+ * This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at https://mozilla.org/MPL/2.0/.
  */
 
 apply plugin: 'com.android.library'
@@ -76,13 +68,14 @@ dependencies {
 	implementation 'com.google.firebase:firebase-auth-ktx'
 	implementation 'com.google.firebase:firebase-firestore-ktx'
 	implementation 'com.google.firebase:firebase-storage-ktx'
+	implementation 'com.google.firebase:firebase-installations-ktx'
 
 	// RxJava
 	implementation libs.rxJava
 
-	// Dagger
-	implementation libs.dagger
-	kapt libs.daggerCompiler
+	// Dagger hilt
+	implementation "com.google.dagger:hilt-android:2.30.1-alpha"
+	kapt "com.google.dagger:hilt-android-compiler:2.30.1-alpha"
 
 	//binary prefs
 	implementation "com.github.yandextaxitech:binaryprefs:1.0.1"
