--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
 
 	def globalConfiguration = rootProject.extensions.getByName("ext")
 	compileSdkVersion globalConfiguration["androidCompileSdkVersion"]
+	buildToolsVersion globalConfiguration["androidBuildToolsVersion"]
 
 
 	defaultConfig {
@@ -74,16 +75,12 @@ android {
 		}
 	}
 
-	sourceSets {
-		main.java.srcDirs += 'src/main/kotlin'
-	}
-
 }
 
 dependencies {
 
 	implementation fileTree(dir: 'libs', include: ['*.jar'])
-	implementation project(':business')
+	implementation project(':domain')
 	implementation project(':data')
 
 	//core
@@ -91,6 +88,7 @@ dependencies {
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 	implementation 'androidx.constraintlayout:constraintlayout:2.1.0-alpha2'
 	implementation 'com.google.android.material:material:1.3.0-beta01'
+	implementation 'androidx.lifecycle:lifecycle-process:2.3.0-rc01'
 
 	// dagger hilt
 	implementation "com.google.dagger:hilt-android:2.30.1-alpha"
@@ -113,7 +111,7 @@ dependencies {
 
 
 	//facebook auth
-	implementation libs.facebookLogin
+	implementation 'com.facebook.android:facebook-login:7.1.0'
 
 	//glide
 	implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -123,23 +121,15 @@ dependencies {
 	}
 
 
-
 	// Navigation component
 	implementation "androidx.navigation:navigation-ui-ktx:2.3.2"
 	implementation "androidx.navigation:navigation-fragment-ktx:2.3.2"
 
 	// RxJava
-	implementation libs.rxJava
+	implementation "io.reactivex.rxjava3:rxjava:3.0.8"
 
 	// RxAndroid
-	implementation libs.rxAndroid
-
-
-	// ViewModel and LiveData
-	implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-
-	//binary prefs
-	implementation "com.github.yandextaxitech:binaryprefs:1.0.1"
+	implementation "io.reactivex.rxjava3:rxandroid:3.0.0"
 
 
 }
