--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
 /*
  * Created by Andrii Kovalchuk
- * Copyright (C) 2020. roove
+ * Copyright (C) 2021. roove
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -16,4 +16,4 @@
  * along with this program.  If not, see https://www.gnu.org/licenses
  */
 
-include ':app', ':business', ':data'
+include ':app', ':domain', ':data'
