--- a/data/src/main/AndroidManifest.xml
+++ b/data/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (C) 2020. roove
+  ~ Copyright (C) 2021. roove
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -16,4 +16,11 @@
   ~ along with this program.  If not, see https://www.gnu.org/licenses
   -->
 
-<manifest package="com.mmdev.data"/>
+<manifest package="com.mmdev.data"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	>
+	
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+	
+</manifest>
