--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 #
 # Created by Andrii Kovalchuk
-# Copyright (C) 2020. roove
+# Copyright (C) 2021. roove
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -29,11 +29,20 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 #Thu Oct 03 14:01:31 EEST 2019
 
-android.databinding.incremental=true
-android.enableJetifier=true
-android.useAndroidX=true
-kapt.use.worker.api=true
-kotlin.code.style=official
-org.gradle.jvmargs=-Xmx4096M -Dkotlin.daemon.jvm.options\="-Xmx2048M" -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.parallel=true
-#org.gradle.warning.mode=all
+# The setting is particularly useful for tweaking memory settings.
+org.gradle.jvmargs = -Xmx2048m -XX:+UseParallelGC
+# Gradle will reuse task outputs from any previous build, when possible, resulting in much faster builds
+org.gradle.caching = true
+# Enables incubating configuration on demand, where Gradle will attempt to configure only necessary projects.
+org.gradle.configureondemand = true
+# Daemon keeps the instance of the Gradle up and running in the background even after your build finishes
+org.gradle.daemon = true
+org.gradle.unsafe.watch-fs = true
+
+android.useAndroidX = true
+# Kotlin code style for this project: "official" or "obsolete":
+kotlin.code.style = official
+kapt.use.worker.api = true
+kapt.incremental.apt = true
+room.incremental = true
