--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,17 +26,15 @@ apply plugin: 'dagger.hilt.android.plugin'
 
 android {
 
-	def globalConfiguration = rootProject.extensions.getByName("ext")
-	compileSdkVersion globalConfiguration["androidCompileSdkVersion"]
-	buildToolsVersion globalConfiguration["androidBuildToolsVersion"]
-
+	compileSdkVersion 30
+	buildToolsVersion "30.0.3"
 
 	defaultConfig {
 		applicationId "com.mmdev.roove"
-		minSdkVersion globalConfiguration["androidMinSdkVersion"]
-		targetSdkVersion globalConfiguration["androidTargetSdkVersion"]
-		versionCode globalConfiguration["androidVersionCode"]
-		versionName globalConfiguration["androidVersionName"]
+		minSdkVersion 21
+		targetSdkVersion 30
+		versionCode "$majorVersion$minorVersion$patchVersion".toInteger()
+		versionName "$majorVersion.$minorVersion.$patchVersion"
 		//testInstrumentationRunner globalConfiguration["testInstrumentationRunner"]
 	}
 
@@ -84,21 +82,20 @@ dependencies {
 	implementation project(':data')
 
 	//core
-	implementation 'androidx.core:core-ktx:1.5.0-alpha05'
+	implementation ('androidx.core:core-ktx:1.5.0-alpha05')
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 	implementation 'androidx.constraintlayout:constraintlayout:2.1.0-alpha2'
 	implementation 'com.google.android.material:material:1.3.0-beta01'
-	implementation 'androidx.lifecycle:lifecycle-process:2.3.0-rc01'
+	implementation ('androidx.lifecycle:lifecycle-process:2.3.0-rc01')
 
 	// dagger hilt
-	implementation "com.google.dagger:hilt-android:2.30.1-alpha"
+	implementation ("com.google.dagger:hilt-android:2.30.1-alpha")
 	kapt "com.google.dagger:hilt-android-compiler:2.30.1-alpha"
 	implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
 	kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
 
 	//custom UI
-	implementation 'org.florescu.android.rangeseekbar:rangeseekbar-library:0.4.0'
-	implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+	implementation ('com.github.chrisbanes:PhotoView:2.3.0')
 
 	//firebase
 	implementation platform('com.google.firebase:firebase-bom:26.2.0')
@@ -111,7 +108,7 @@ dependencies {
 
 
 	//facebook auth
-	implementation 'com.facebook.android:facebook-login:7.1.0'
+	implementation 'com.facebook.android:facebook-login:8.1.0'
 
 	//glide
 	implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -126,7 +123,7 @@ dependencies {
 	implementation "androidx.navigation:navigation-fragment-ktx:2.3.2"
 
 	// RxJava
-	implementation "io.reactivex.rxjava3:rxjava:3.0.8"
+	implementation "io.reactivex.rxjava3:rxjava:3.0.9"
 
 	// RxAndroid
 	implementation "io.reactivex.rxjava3:rxandroid:3.0.0"
