themes.xml refactored

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -64,7 +64,7 @@ dependencies {
 	implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
 	//facebook auth
-	implementation 'com.facebook.android:facebook-login:8.1.0'
+	implementation 'com.facebook.android:facebook-login:8.2.0'
 
 	//firebase
 	implementation platform('com.google.firebase:firebase-bom:26.2.0')
@@ -72,6 +72,7 @@ dependencies {
 	implementation 'com.google.firebase:firebase-firestore-ktx'
 	implementation 'com.google.firebase:firebase-storage-ktx'
 	implementation 'com.google.firebase:firebase-installations-ktx'
+	implementation 'com.firebase:geofire-android-common:3.1.0'
 
 	// RxJava
 	implementation "io.reactivex.rxjava3:rxjava:3.0.9"
